added comments for easier readabilty

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -494,26 +494,35 @@
     }
    ],
    "source": [
+    "#creating the base data frame for the school summary using groupby on the school_data_complete data frame\n",
     "school_data_df= school_data_complete.groupby([\"school_name\",\"type\"]).agg({\"Student ID\":'count',\n",
     "                                                        \"budget\":\"mean\",\n",
     "                                                        \"maths_score\":\"mean\",\n",
     "                                                        \"reading_score\":\"mean\"})\n",
+    "#renaming the columns\n",
     "school_data_df.rename(columns = {\"Student ID\": \"Total Students\",\"budget\":\"Total School Budget\",\n",
     "                                 \"maths_score\":\"Average Maths Score\",\"reading_score\":\"Average Reading Score\"},inplace = True)\n",
+    "#calculating per student budget\n",
     "school_data_df[\"Total School Budget\"].astype(\"int\")\n",
     "per_student_budget = school_data_df[\"Total School Budget\"]/school_data_df[\"Total Students\"]\n",
     "school_data_df[\"Per Student Budget\"]= per_student_budget\n",
+    "#determing the % passing maths \n",
     "maths=school_data_complete.loc[(school_data_complete[\"maths_score\"]>=50),:]\n",
     "pass_maths=maths.groupby(\"school_name\")[\"maths_score\"].count()\n",
     "school_data_df[\"% Passing Maths\"]= (pass_maths / school_data_df[\"Total Students\"])*100\n",
+    "#determining the % reading \n",
     "reading = school_data_complete.loc[(school_data_complete[\"reading_score\"]>=50),:]\n",
     "pass_reading=reading.groupby(\"school_name\")[\"reading_score\"].count()\n",
     "school_data_df[\"% Passing Reading\"]= (pass_reading / school_data_df[\"Total Students\"])*100\n",
+    "#determining the % overall passing\n",
     "overall= school_data_complete.loc[(school_data_complete[\"reading_score\"]>=50)&(school_data_complete[\"maths_score\"]>=50),:]\n",
     "pass_overall = overall.groupby(\"school_name\")[\"reading_score\"].count()\n",
     "school_data_df[\"% Overall Passing\"]= (pass_overall/ school_data_df[\"Total Students\"])*100\n",
+    "#reseting the index(\"type\") back to column\n",
     "school_data_df_reset=school_data_df.reset_index(\"type\")\n",
+    "#renaming the type column\n",
     "school_data_df_reset.rename(columns ={\"type\":\"School Type\"},inplace = True)\n",
+    "#rearranging the columns\n",
     "school_summary_df= school_data_df_reset[[\"School Type\",\"Total Students\",\"Total School Budget\",\n",
     "                         \"Per Student Budget\",\"Average Maths Score\",\"Average Reading Score\",\n",
     "                         \"% Passing Maths\",\"% Passing Reading\",\"% Overall Passing\"]]\n",
