rounded data in the school summary table to two decimal places

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "Wright High School                 86.67              79.72  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
     "school_summary_df= school_data_df_reset[[\"School Type\",\"Total Students\",\"Total School Budget\",\n",
     "                                         \"Per Student Budget\",\"Average Maths Score\",\"Average Reading Score\",\n",
     "                                         \"% Passing Maths\",\"% Passing Reading\",\"% Overall Passing\"]]\n",
-    "#formatting the data to two decimal places\n",
+    "#rounding the data to two decimal places\n",
     "school_summary_df[\"Average Maths Score\"]=school_summary_df[\"Average Maths Score\"].round(2)\n",
     "school_summary_df[\"Average Reading Score\"]=school_summary_df[\"Average Reading Score\"].round(2)\n",
     "school_summary_df[\"% Passing Maths\"]=school_summary_df[\"% Passing Maths\"].round(2)\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -701,7 +701,7 @@
        "Rodriguez High School              87.40              79.42  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "Ford High School                   82.22              67.47  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
        "Wright High School     71.741176  72.179012  73.275862  70.848238"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1281,7 @@
        "Wright High School     71.823529  71.386831  70.475862  69.821138"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
        "$645-680                                   66.75  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1437,7 @@
     "                                                                                        \"% Passing Maths\":\"mean\",\n",
     "                                                                                        \"% Passing Reading\":\"mean\",\n",
     "                                                                                        \"% Overall Passing\":\"mean\"})\n",
-    "\n",
+    "#rounding to 2 decimal places\n",
     "spending_summary_df[\"Average Maths Score\"]=spending_summary_df[\"Average Maths Score\"].round(2)\n",
     "spending_summary_df[\"Average Reading Score\"]=spending_summary_df[\"Average Reading Score\"].round(2)\n",
     "spending_summary_df[\"% Passing Maths\"]=spending_summary_df[\"% Passing Maths\"].round(2)\n",
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -1546,7 +1546,7 @@
        "Large (2000-5000)           84.2525            83.3025            70.2925  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1650,7 @@
        "Independent          86.247500          76.975000  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
