Analysis and Conclusion added

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "0          72.808272  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "Wright High School                 86.67              79.72  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,15 +506,18 @@
     "school_data_df[\"Total School Budget\"].astype(\"float\")\n",
     "per_student_budget = school_data_df[\"Total School Budget\"]/school_data_df[\"Total Students\"]\n",
     "school_data_df[\"Per Student Budget\"]= per_student_budget\n",
-    "#determing the % passing maths \n",
+    "###determing the % passing maths###\n",
+    "#determining the rows in the school data complete that contain the maths score eqaul or greater than 50\n",
     "maths=school_data_complete.loc[(school_data_complete[\"maths_score\"]>=50),:]\n",
+    "#counting the students per school with score above or equal to 50\n",
     "pass_maths=maths.groupby(\"school_name\")[\"maths_score\"].count()\n",
+    "#determining the percentage pass in maths per school\n",
     "school_data_df[\"% Passing Maths\"]= (pass_maths / school_data_df[\"Total Students\"])*100\n",
-    "#determining the % reading \n",
+    "#determining the % reading using the same steps as for maths \n",
     "reading = school_data_complete.loc[(school_data_complete[\"reading_score\"]>=50),:]\n",
     "pass_reading=reading.groupby(\"school_name\")[\"reading_score\"].count()\n",
     "school_data_df[\"% Passing Reading\"]= (pass_reading / school_data_df[\"Total Students\"])*100\n",
-    "#determining the % overall passing\n",
+    "#determining the % overall passing using the same steps as above for maths\n",
     "overall= school_data_complete.loc[(school_data_complete[\"reading_score\"]>=50)&(school_data_complete[\"maths_score\"]>=50),:]\n",
     "pass_overall = overall.groupby(\"school_name\")[\"reading_score\"].count()\n",
     "school_data_df[\"% Overall Passing\"]= (pass_overall/ school_data_df[\"Total Students\"])*100\n",
@@ -553,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "metadata": {
     "scrolled": true
    },
@@ -701,7 +704,7 @@
        "Rodriguez High School              87.40              79.42  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +876,7 @@
        "Ford High School                   82.22              67.47  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1079,7 @@
        "Wright High School     71.741176  72.179012  73.275862  70.848238"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1284,7 @@
        "Wright High School     71.823529  71.386831  70.475862  69.821138"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1425,7 @@
        "$645-680                                   66.75  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true
    },
@@ -1546,7 +1549,7 @@
        "Large (2000-5000)           84.2525            83.3025            70.2925  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1653,7 @@
        "Independent          86.247500          76.975000  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,6 +1663,26 @@
     "                                                                 \"mean\",\"% Passing Maths\":\"mean\", \"% Passing Reading\":\n",
     "                                                                 \"mean\",\"% Overall Passing\":\"mean\",})\n",
     "Type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**** Analysis ****\n",
+    "1. Independent schools are perfoming better than the government schools.\n",
+    "2. The schools with large size are perfoming poorly than Small size schools.\n",
+    "3. The schools with lower per student budget have a higher score averages than schools with higher per student budget.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "**** Conclusion *****\n",
+    "1. The schools with higher per student budget have students performing poorly across all subjects compared to the students \n",
+    "   from schoools having a lower per student budget who are perfomring much better. The Schools having a lower per student budget \n",
+    "   have more students passing compared to the schools having a higher per student budget who hav less students passing.\n",
+    "2. The schools that are large in size have a lower percnetage pass rate compared to the school that have a smaller size which\n",
+    "   have a higher percentage passing rate."
    ]
   }
  ],
